zot/zot-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: zot
spec:
  selector:
    app: zot
  ports:
    - name: registry
      port: 5000
      protocol: TCP
      targetPort: 5000
  type: ClusterIP
